fixed the aside element to not stretch all the way down

--- a/CSS-Layouts/Flex-Layout/style.css
+++ b/CSS-Layouts/Flex-Layout/style.css
@@ -315,6 +315,7 @@ footer {
 
 .row {
   display: flex;
+  align-items: flex-start;
   gap: 75px;
   margin-bottom: 60px;
 }
